# piclas

./: .directory  .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  BuildConfigurations.md  CMakeLists.txt  CMakeListsLib.txt  CMakeListsMachine.txt  COMPILER.md  CONTRIBUTORS.md  INSTALL.md  INSTALLFORHLR1.md  INSTALLHAZELHEN.md  INSTALLHDF5.md  LICENCE.md  Makefile  Makefile.defs  PDFINIT.md  README.md  REFERENCE.md  REGGIE.md  STYLEGUIDE.md  SpeciesDatabase.h5  TRACKING.md  test_max_warnings.sh
src/: '  :w  CMakeLists.txt  Makefile  \  ^[ :call JumpToTag()  boltzplatz.f90  boltzplatz.h  commit.h  compare-patch  depexclude.mk  etaclip.f90  h5boltz2vtk.f90  h5piclas2vtk.f90  log.diff2  piclas.f90  piclas.h  piclas2vtk.f90  piclaslib.f90  preprocflags.f90  srcfiles.mk  tags  xiclip.f90
src/analyze/: analyze.f90  analyze_fv.f90  analyze_vars.f90  analyzefield.f90  analyzefield_hdg.f90  analyzefield_poynting.f90  analyzefield_tools.f90  poyntingint.f90
src/dg/: dg.f90  dg_vars.f90  fillflux.f90  surfint.f90  volint.f90
src/dielectric/: dielectric.f90  dielectric_vars.f90
src/equations/DVM/: analyze_dvm.f90  calctimestep.f90  distfunc.f90  equation.f90  equation_vars.f90  flux.f90  getboundaryflux.f90  getboundarygrad.f90  riemann.f90
src/equations/discrete_velocity/: analyze_dvm.f90  calctimestep.f90  distfunc.f90  dvm_boundary_analyze.f90  equation.f90  equation_vars.f90  flux.f90  getboundaryflux.f90  getboundarygrad.f90  incbeta.f90  riemann.f90  timeavg.f90
src/equations/drift_diffusion/: calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  getboundaryflux.f90  getboundarygrad.f90  ionization.f90  riemann.f90  timeavg.f90  transport_data.f90
src/equations/electrostatic/: calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  getboundaryflux.f90  riemann.f90  timeavg.f90  timeavg_vars.f90
src/equations/electrostatic_pois/: calctimestep.f90  equation.f90  equation_vars.f90  flux.f90  flux_pois.f90  getboundaryflux.f90  getboundaryflux_pois.f90  (+2 more)
src/extrae/: extrae_module.f90
src/filter/: filter.f90  filter_vars.f90
src/fv/: fillflux.f90  fv.f90  fv_gradients.f90  fv_limiter.f90  fv_metrics.f90  fv_vars.f90  surfint.f90
src/globals/: array_operations.f90  boltzplatz_tools.f90  commandlinearguments.f90  globals.f90  globals_init.f90  globals_vars.f90  mathtools.f90  preprocessing.f90  processmemusage.cxx  vector.f90
src/gradients/: HowToUseGradients.txt  gradients.f90  gradients_metrics.f90  gradients_vars.f90  prolong_fv.f90
src/hdg/: elem_mat.f90  fillmortar_hdg.f90  hdg.f90  hdg_init.f90  hdg_linear.f90  hdg_nonlinear.f90  hdg_petsc.f90  hdg_readin.f90  hdg_tools.f90  hdg_vars.f90  hdg_vars_petsc.f90
src/implicit/: linear_solver.f90
src/init/: Uebersicht_allevar  boltzplatz_init.f90  define_parameters_init.f90  piclas_init.f90
src/interfaces/: interfaces.f90  interfaces_vars.f90
src/interpolation/: basis.f90  changeBasis.f90  eval_xyz.f90  interpolation.f90  interpolation_vars.f90  prolongtoface.f90
src/io_hdf5/: hdf5_input.f90  hdf5_input_field.f90  hdf5_input_particle.f90  hdf5_output.f90  hdf5_output_elemdata.f90  hdf5_output_field.f90  hdf5_output_field_hdg.f90  hdf5_output_field_maxwell.f90  hdf5_output_particle.f90  hdf5_output_particle_hdg.f90  hdf5_output_particle_pic.f90  hdf5_output_state.f90  hdf5_output_tools.f90  io_hdf5.f90
src/linearsolver/: linearsolver.f90  linearsolver_vars.f90  newton.f90  particlesolver.f90  predictor.f90
src/loadbalance/: loadbalance.f90  loadbalance_metrics.f90  loadbalance_metrics_fv.f90  loadbalance_timers.f90  loadbalance_tools.f90  loadbalance_vars.f90  loaddistribution.f90
src/mesh/: debugmesh.f90  mapping.f90  mesh.f90  mesh_pAdaption.f90  mesh_readin.f90  mesh_tools.f90  mesh_vars.f90  mesh_vars_fv.f90  metrics.f90  metrics_fv.f90  particle_surfaces.f90  particle_surfaces_vars.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90  fillmortar_fv.f90  mortar.f90  mortar_metrics.f90  mortar_vars.f90
src/mpi/: mpi.f90  mpi_fv.f90  mpi_hdg.f90  mpi_output.f90  mpi_shared.f90  mpi_shared_vars.f90  mpi_vars.f90
src/output/: output.f90  output_VTK.f90  output_tecplot.f90  output_vars.f90  output_vtk.f90  read_userblock.c
src/particles/: ^[ :call JumpToTag()  particle_MPFtools.f90  particle_emission.f90  particle_init.f90  particle_operations.f90  particle_pressure.f90  particle_rhs.f90  particle_timestep.f90  particle_tools.f90  particle_vMPF.f90  particle_vars.f90  particle_weighting.f90  srcfiles_particles.mk  srcfiles_particles_hdg.mk  srcfiles_particles_imex.mk  srcfiles_particles_pois.mk  tags
src/pml/: pml.f90  pml_vars.f90
src/posti/: CMakeLists.txt
src/precond/: applypreconditioner.f90  precond.f90  precond_vars.f90
src/qds/: qds.f90  qds_vars.f90
src/readIMD/: readIMD.f90  readIMD_vars.f90
src/readintools/: isovaryingstring.f90  options.f90  readintools.f90  stringtools.f90
src/recordpoints/: recordpoints.f90  recordpoints_vars.f90
src/restart/: restart.f90  restart_field.f90  restart_tools.f90  restart_vars.f90
src/superB/: superB_coil.f90  superB_init.f90  superB_main.f90  superB_permMag.f90  superB_tools.f90  superB_vars.f90
src/symmetry/: symmetry.f90  symmetry_vars.f90
src/timedisc/: timedisc.f90  timedisc_TimeStepByEulerImplicit.f90  timedisc_TimeStepByImplicitRK.f90  timedisc_TimeStepByLSERK.f90  timedisc_TimeStepByRosenbrock.f90  timedisc_TimeStepPoisson.f90  timedisc_TimeStepPoissonByBorisLeapfrog.f90  timedisc_TimeStepPoissonByHigueraCary.f90  timedisc_TimeStepPoissonByLSERK.f90  timedisc_TimeStep_BGK.f90  timedisc_TimeStep_DSMC.f90  timedisc_TimeStep_DSMC_Debug.f90  timedisc_TimeStep_DVM.f90  timedisc_TimeStep_ExplicitFV.f90  timedisc_TimeStep_FPFlow.f90  timedisc_TimeStep_Radiation.f90  timedisc_TimeStep_ploesma.f90  timedisc_init.f90  timedisc_vars.f90
src/utils/: utils.f90  utils_vars.f90
src/visu/: CMakeLists.txt  converttovisu.f90  mappings.f90  readstate.f90  visu.f90  visu_Cwrapper.f90  visumesh.f90
unitTests/: CMakeLists.txt  MatrixInverse.f90  MortarBasis.f90  PETScKSPUnitTest.f90  ReadInTools.f90  ReadInTools.ini
(+5247 files in other folders)
